--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,36 @@
 [package]
-name = "krnl-builder"
+name = "krnl"
 version = "0.0.1"
 authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
 edition = "2021"
 publish = false
 
 [dependencies]
-spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu/" }
+krnl-types = { path = "krnl-types" }
+krnl-macros = { path = "krnl-macros" }
+krnl-core = { path = "krnl-core" }
+vulkano = { version = "0.30.0", optional = true }
+spirv = "0.2.0"
+thiserror = "1.0.31"
+derive_more = "0.99.11"
+paste = "1.0.7"
+num-traits = "0.2.14"
+half = { git = "https://github.com/starkat99/half-rs", default-features = false, features = ["num-traits"], optional = true }
+once_cell = { version = "1.13.0", default-features = false, features = ["std", "alloc"] }
+parking_lot = "0.12.1"
+anyhow = "1.0.59"
+crossbeam-channel = { version = "0.5.6", optional = true }
+futures-util = { version = "0.3.21", default-features = false }
+blocker = { version = "0.1.2", features = ["thread_yield"] }
+futures-lite = { version = "1.12.0", optional = true, default-features = false }
+bytemuck = { version = "1.11.0", default-features = false }
+bincode = "1.3.3"
+
+[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
+ash-molten = { version = "0.12.0", features = ["pre-built"], optional = true }
+ash = { version = "0.33.3", optional = true }
+
+[features]
+device = ["dep:vulkano", "dep:ash-molten", "dep:ash", "dep:crossbeam-channel", "dep:futures-lite"]
+half = ["krnl-core/half", "dep:half"]
+build = ["krnl-macros/build"]
