--- a/krnl-builder/Cargo.toml
+++ b/krnl-builder/Cargo.toml
@@ -7,7 +7,8 @@ publish = false
 
 [dependencies]
 anyhow = "1.0.61"
-krnl-core = { path = "../krnl-core" }
+krnl-types = { path = "../krnl-types" }
 spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu/" }
 bincode = "1.3.3"
-serde = { version = "1.0.143", default-features = false, features = ["derive"] }
+spirv = "0.2.0"
+bytemuck = "1.12.1"
