--- a/krnl-core/Cargo.toml
+++ b/krnl-core/Cargo.toml
@@ -5,24 +5,10 @@ authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
 edition = "2021"
 publish = false
 
-[target."cfg(not(target_arch = \"spirv\"))".dependencies]
-glam = "0.21.2"
-num-traits = "0.2.14"
-half = { git = "https://github.com/starkat99/half-rs", features = ["num-traits"], optional = true }
-derive_more = "0.99.11"
-bytemuck = "1.4.1"
-spirv = { version = "0.2.0", features = ["serialize", "deserialize"] }
-
-[target."cfg(target_arch = \"spirv\")".dependencies]
-#spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu" }
-#glam = { version = "0.21.2", default-features = false, features = ["libm"] }
-num-traits = { version = "0.2.14", default-features = false }
-half = { git = "https://github.com/starkat99/half-rs", default-features = false, features = ["num-traits"], optional = true }
-
 [features]
-half = ["dep:half"]
+half = ["krnl-types/half"]
 
 [dependencies]
-krnl-macros = { path = "../krnl-macros", optional = true }
-bincode = "1.3.3"
-serde = { version = "1.0.143", default-features = false, features = ["derive"] }
+krnl-types = { path = "../krnl-types" }
+krnl-macros = { path = "../krnl-macros" }
+glam = { version = "0.21.3", default-features = false, features = ["libm"] }
