--- a/krnl-macros/Cargo.toml
+++ b/krnl-macros/Cargo.toml
@@ -8,12 +8,14 @@ publish = false
 [lib]
 proc-macro = true
 
+[features]
+build = []
+
 [dependencies]
-krnl-core = { path = "../krnl-core" }
+krnl-types = { path = "../krnl-types" }
 syn = { version = "1.0.33", features = ["full"] }
 quote = "1.0.7"
-#proc-macro2 = "1.0.18"
-#derive-syn-parse = "0.1.5"
-#parking_lot = "0.12.1"
+proc-macro2 = "1.0.18"
+derive-syn-parse = "0.1.5"
 bincode = "1.3.3"
 serde = { version = "1.0.143", default-features = false, features = ["derive"] }
