--- a/krnl-macros/Cargo.toml
+++ b/krnl-macros/Cargo.toml
@@ -19,3 +19,4 @@ proc-macro2 = "1.0.18"
 derive-syn-parse = "0.1.5"
 bincode = "1.3.3"
 serde = { version = "1.0.143", default-features = false, features = ["derive"] }
+spirv = "0.2.0"
