--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,13 +30,14 @@ blocker = { version = "0.1.2", features = ["thread_yield"] }
 futures-lite = { version = "1.12.0", optional = true, default-features = false }
 bytemuck = { version = "1.11.0", default-features = false }
 bincode = "1.3.3"
+dashmap = { version = "5.3.4", optional = true }
 
 [target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
 ash-molten = { version = "0.12.0", features = ["pre-built"], optional = true }
 ash = { version = "0.33.3", optional = true }
 
 [features]
-device = ["dep:vulkano", "dep:ash-molten", "dep:ash", "dep:crossbeam-channel", "dep:futures-lite"]
+device = ["dep:vulkano", "dep:ash-molten", "dep:ash", "dep:crossbeam-channel", "dep:futures-lite", "dep:dashmap"]
 half = ["krnl-core/half", "dep:half"]
 build = ["krnl-macros/build"]
 
