--- a/krnl-builder/Cargo.toml
+++ b/krnl-builder/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 publish = false
 
 [dependencies]
-anyhow = "1.0.61"
+anyhow = "1.0.60"
 krnl-types = { path = "../krnl-types" }
 spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu/" }
 bincode = "1.3.3"
 spirv = "0.2.0"
 bytemuck = "1.12.1"
+rspirv = "0.11.0"
+spirv-tools = "0.8.0"
