--- a/krnl-macros/Cargo.toml
+++ b/krnl-macros/Cargo.toml
@@ -17,3 +17,5 @@ derive-syn-parse = "0.1.5"
 bincode = "1.3.3"
 serde = { version = "1.0.143", default-features = false, features = ["derive"] }
 spirv = "0.2.0"
+once_cell = { version = "1.14.0", default-features = false, features = ["std"] }
+bimap = { version = "0.6.2", features = ["serde"] }
