--- a/krnl-macros/Cargo.toml
+++ b/krnl-macros/Cargo.toml
@@ -8,6 +8,9 @@ publish = false
 [lib]
 proc-macro = true
 
+[features]
+half = ["krnl-types/half"]
+
 [dependencies]
 krnl-types = { path = "../krnl-types" }
 syn = { version = "1.0.33", features = ["full"] }
