--- a/krnl-core/Cargo.toml
+++ b/krnl-core/Cargo.toml
@@ -5,14 +5,23 @@ authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
 edition = "2021"
 publish = false
 
-[features]
-spirv-panic = []
-half = ["krnl-types/half", "krnl-macros/half"]
-
 [dependencies]
-krnl-types = { path = "../krnl-types" }
 krnl-macros = { path = "../krnl-macros" }
+spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "9e2e66729d440fdbf53ce21d173b683240aa2805" }
 glam = { version = "0.21.3", default-features = false, features = ["libm"] }
 
-[profile.dev.package.krnl-macros]
-opt-level = 0
+
+[target."cfg(not(target_arch = \"spirv\"))".dependencies]
+num-traits = "0.2.14"
+half = { git = "https://github.com/starkat99/half-rs", features = ["num-traits", "bytemuck", "serde"], optional = true }
+bytemuck = "1.4.1"
+serde = { version = "1.0.143", features = ["derive"] }
+thiserror = "1.0.32"
+derive_more = { version = "0.99.11", default-features = false, features = ["display", "is_variant"] }
+
+[target."cfg(target_arch = \"spirv\")".dependencies]
+num-traits = { version = "0.2.14", default-features = false }
+half = { git = "https://github.com/starkat99/half-rs", default-features = false, features = ["num-traits", "bytemuck"], optional = true }
+
+[features]
+half = ["dep:half"]
