total rework, new kernel api working

--- a/krnl-core/Cargo.toml
+++ b/krnl-core/Cargo.toml
@@ -13,7 +13,7 @@ glam = { version = "0.21.3", default-features = false, features = ["libm"] }
 
 [target."cfg(not(target_arch = \"spirv\"))".dependencies]
 num-traits = "0.2.14"
-half = { git = "https://github.com/starkat99/half-rs", features = ["num-traits", "bytemuck", "serde"], optional = true }
+half = { git = "https://github.com/starkat99/half-rs", features = ["num-traits", "bytemuck", "serde"] }
 bytemuck = "1.4.1"
 serde = { version = "1.0.143", features = ["derive"] }
 thiserror = "1.0.32"
@@ -21,7 +21,4 @@ derive_more = { version = "0.99.11", default-features = false, features = ["disp
 
 [target."cfg(target_arch = \"spirv\")".dependencies]
 num-traits = { version = "0.2.14", default-features = false }
-half = { git = "https://github.com/starkat99/half-rs", default-features = false, features = ["num-traits", "bytemuck"], optional = true }
-
-[features]
-half = ["dep:half"]
+half = { git = "https://github.com/starkat99/half-rs", default-features = false, features = ["num-traits", "bytemuck"] }
