--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ thiserror = "1.0.31"
 derive_more = "0.99.11"
 paste = "1.0.7"
 num-traits = "0.2.14"
-half = { git = "https://github.com/starkat99/half-rs", default-features = false, features = ["num-traits"], optional = true }
+half = { git = "https://github.com/starkat99/half-rs", default-features = false, features = ["num-traits"] }
 once_cell = { version = "1.13.0", default-features = false, features = ["std", "alloc"] }
 parking_lot = "0.12.1"
 anyhow = "1.0.60"
@@ -31,11 +31,16 @@ futures-lite = { version = "1.12.0", optional = true, default-features = false }
 bytemuck = { version = "1.11.0", default-features = false }
 bincode = "1.3.3"
 dashmap = { version = "5.3.4", optional = true }
+rspirv = "0.11.0"
+spirv-tools = "0.9.0"
 
 [target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
 ash-molten = { version = "0.12.0", features = ["pre-built"], optional = true }
 ash = { version = "0.33.3", optional = true }
 
 [features]
+# TODO change device to vulkan?
 device = ["dep:vulkano", "dep:ash-molten", "dep:ash", "dep:crossbeam-channel", "dep:futures-lite", "dep:dashmap"]
-half = ["krnl-core/half", "dep:half"]
+
+[dev-dependencies]
+shaderc = "0.8.0"
