--- a/krnl-macros/Cargo.toml
+++ b/krnl-macros/Cargo.toml
@@ -14,7 +14,7 @@ quote = "1.0.7"
 proc-macro2 = "1.0.18"
 derive-syn-parse = "0.1.5"
 bincode = "1.3.3"
-serde = { version = "1.0.143", default-features = false, features = ["derive"] }
-spirv = { version = "0.2.0", features = ["serialize", "deserialize"] }
-once_cell = { version = "1.14.0", default-features = false, features = ["std"] }
-parking_lot = "0.12.1"
+#serde = { version = "1.0.143", default-features = false, features = ["derive"] }
+#spirv = { version = "0.2.0", features = ["serialize", "deserialize"] }
+#once_cell = { version = "1.14.0", default-features = false, features = ["std"] }
+#parking_lot = "0.12.1"
