--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ bytemuck = { version = "1.11.0", default-features = false }
 bincode = "1.3.3"
 dashmap = { version = "5.3.4", optional = true }
 rspirv = "0.11.0"
-spirv-tools = "0.9.0"
+#spirv-tools = "0.9.0"
 
 [target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
 ash-molten = { version = "0.12.0", features = ["pre-built"], optional = true }
