--- a/krnl-macros/Cargo.toml
+++ b/krnl-macros/Cargo.toml
@@ -14,6 +14,8 @@ quote = "1.0.7"
 proc-macro2 = "1.0.18"
 derive-syn-parse = "0.1.5"
 bincode = "1.3.3"
+siphasher = "0.3.10"
+prettyplease = "0.1.21"
 #serde = { version = "1.0.143", default-features = false, features = ["derive"] }
 #spirv = { version = "0.2.0", features = ["serialize", "deserialize"] }
 #once_cell = { version = "1.14.0", default-features = false, features = ["std"] }
