--- a/krnlc/Cargo.toml
+++ b/krnlc/Cargo.toml
@@ -12,11 +12,13 @@ syn = { version = "1.0.103", features = ["full", "visit", "extra-traits"] }
 quote = "1.0.21"
 bytemuck = "1.12.3"
 cargo_metadata = "0.15.1"
-spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "9e2e66729d440fdbf53ce21d173b683240aa2805" }
+spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", tag = "v0.4.0-alpha.17" }
 bincode = "1.3.3"
 prettyplease = "0.1.21"
+symlink = "0.1.0"
 #serde = { version = "1.0.143", default-features = false, features = ["derive"] }
 #spirv = { version = "0.2.0", features = ["serialize", "deserialize"] }
 #bytemuck = "1.4.1"
-#rspirv = "0.11.0"
-#spirv-tools = "0.8.0"
+rspirv = "0.11.0"
+spirv-tools = "0.9.0"
+proc-macro2 = "1.0.47"
