--- a/krnl-core/Cargo.toml
+++ b/krnl-core/Cargo.toml
@@ -8,6 +8,8 @@ publish = false
 [dependencies]
 krnl-macros = { path = "../krnl-macros" }
 spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", tag = "v0.4.0-alpha.17" }
+paste = "1.0.7"
+dry = "0.1.1"
 
 [target."cfg(not(target_arch = \"spirv\"))".dependencies]
 glam = "0.22.0"
