--- a/krnl-core/Cargo.toml
+++ b/krnl-core/Cargo.toml
@@ -11,7 +11,7 @@ spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", tag = "v0.4.0-a
 paste = "1.0.7"
 dry = "0.1.1"
 
-[target."cfg(not(target_arch = \"spirv\"))".dependencies]
+[target.'cfg(not(target_arch = "spirv"))'.dependencies]
 glam = "0.22.0"
 num-traits = "0.2.14"
 half = { git = "https://github.com/starkat99/half-rs", features = ["num-traits", "bytemuck", "serde"] }
@@ -20,8 +20,7 @@ serde = { version = "1.0.143", features = ["derive"] }
 thiserror = "1.0.32"
 derive_more = { version = "0.99.11", default-features = false, features = ["display", "is_variant"] }
 
-
-[target."cfg(target_arch = \"spirv\")".dependencies]
+[target.'cfg(target_arch = "spirv")'.dependencies]
 glam = { version = "0.22.0", default-features = false, features = ["libm"] }
 num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
 half = { git = "https://github.com/starkat99/half-rs", default-features = false, features = ["num-traits", "bytemuck"] }
