--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ members = ["benchmarks/*"]
 [dependencies]
 krnl-macros = { path = "krnl-macros" }
 krnl-core = { path = "krnl-core" }
-vulkano = { version = "0.30.0", optional = true }
+vulkano = { git = "https://github.com/vulkano-rs/vulkano", branch = "0.32.X", optional = true }
 serde = { version = "1.0.143", default-features = false, features = ["derive", "rc"] }
 spirv = { version = "0.2.0", default-features = false, features = ["serialize", "deserialize"] }
 thiserror = "1.0.31"
@@ -36,14 +36,14 @@ bincode = "1.3.3"
 dashmap = { version = "5.3.4", optional = true }
 rspirv = "0.11.0"
 dry = "0.1.1"
+ash = { version = "0.37.1", optional = true }
 
 [target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
 ash-molten = { version = "0.12.0", features = ["pre-built"], optional = true }
-ash = { version = "0.33.3", optional = true }
 
 [features]
 # TODO change device to vulkan?
-device = ["dep:vulkano", "dep:ash-molten", "dep:ash", "dep:crossbeam-channel", "dep:futures-lite", "dep:dashmap"]
+device = ["dep:vulkano", "dep:ash", "dep:ash-molten", "dep:crossbeam-channel", "dep:futures-lite", "dep:dashmap"]
 
 [[test]]
 name = "integration_tests"
