--- a/krnl-core/Cargo.toml
+++ b/krnl-core/Cargo.toml
@@ -3,6 +3,7 @@ name = "krnl-core"
 version = "0.0.1"
 authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
 edition = "2021"
+repository = "https://github.com/charles-r-earp/krnl"
 publish = false
 
 [dependencies]
