--- a/krnlc/tests/krnlc-test/Cargo.toml
+++ b/krnlc/tests/krnlc-test/Cargo.toml
@@ -2,8 +2,16 @@
 name = "krnlc-test"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
 
 [dependencies]
+glam = "0.22.0"
 krnl = { path = "../../../", features = ["device"] }
+
+[package.metadata.krnlc]
+# features = ["foo"] 
+
+[package.metadata.krnlc.dependencies]
+glam = { default-features = false, features = ["libm"] }
