--- a/crates/krnl/Cargo.toml
+++ b/crates/krnl/Cargo.toml
@@ -31,14 +31,16 @@ once_cell = { version = "1.13.0", default-features = false, features = ["std", "
 #crossbeam-channel = { version = "0.5.6", optional = true }
 bytemuck = { version = "1.11.0", default-features = false }
 #bincode = "1.3.3"
-#dashmap = { version = "5.3.4", optional = true }
-#rspirv = "0.11.0"
+dashmap = { version = "5.3.4", optional = true }
+rspirv = { version = "0.11.0", optional = true }
 
 ash = { version = "0.37.1", optional = true }
 rayon = "1.6.1"
+shaderc = { version = "0.8.2", optional = true }
+#spirv-tools = { version = "0.9.0", default-features = false, features = ["use-compiled-tools"], optional = true }
 
 [target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
 ash-molten = { version = "0.12.0", features = ["pre-built"], optional = true }
 
 [features]
-device = ["dep:vulkano", "dep:ash", "dep:ash-molten", "dep:crossbeam-channel"]
+device = ["dep:vulkano", "dep:ash", "dep:ash-molten", "dep:crossbeam-channel", "dep:dashmap", "dep:shaderc", "dep:rspirv"]
