--- a/crates/krnl-macros/Cargo.toml
+++ b/crates/krnl-macros/Cargo.toml
@@ -14,15 +14,13 @@ publish = false
 proc-macro = true
 
 [dependencies]
-
-
-#syn = { version = "1.0.33", features = ["full", "extra-traits"] }
-#quote = "1.0.7"
-#proc-macro2 = "1.0.18"
-#derive-syn-parse = "0.1.5"
+syn = { version = "1.0.33", features = ["full", "extra-traits"] }
+quote = "1.0.7"
+proc-macro2 = "1.0.18"
+derive-syn-parse = "0.1.5"
 #bincode = "1.3.3"
 #siphasher = "0.3.10"
-#prettyplease = "0.1.21"
+prettyplease = "0.1.21"
 #serde = { version = "1.0.143", default-features = false, features = ["derive"] }
 
 
