--- a/crates/krnlc/Cargo.toml
+++ b/crates/krnlc/Cargo.toml
@@ -15,8 +15,8 @@ syn = { version = "1.0.103", features = ["full", "visit", "extra-traits"] }
 #bytemuck = "1.12.3"
 cargo_metadata = "0.15.1"
 spirv-builder = { version = "0.5.0", default-features = false }
-#serde = { version = "1.0.143", default-features = false, features = ["derive"] }
-#bincode = "1.3.3"
+serde = { version = "1.0.143", default-features = false, features = ["derive"] }
+bincode = "1.3.3"
 prettyplease = "0.1.21"
 symlink = "0.1.0"
 rspirv = "0.11.0"
