--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/krnl", "crates/krnl-core", "crates/krnl-macros", "benchmarks/*"]
+members = ["crates/krnl", "crates/krnl-core", "crates/krnl-macros", "benchmarks/*", "tests/*"]
 default-members = ["crates/krnl"]
 
 [workspace.package]
@@ -13,7 +13,7 @@ readme = "README.md"
 repository = "https://github.com/charles-r-earp/krnl"
 
 [workspace.dependencies]
-serde = "1.0.143"
+serde = { version = "1.0.143", default-features = false, features = ["derive"] }
 dry = "0.1.1"
 paste = "1.0.7"
 derive_more = "0.99.11"
@@ -21,6 +21,7 @@ anyhow = "1.0.60"
 half = { version = "2.1.0", default-features = false, features = ["num-traits", "serde"] }
 num-traits = { version = "0.2.14", default-features = false }
 thiserror = "1.0.31"
+bincode = "1.3.3"
 
 [profile.release]
 debug = true
