--- a/crates/krnl-macros/Cargo.toml
+++ b/crates/krnl-macros/Cargo.toml
@@ -18,10 +18,10 @@ syn = { version = "1.0.33", features = ["full", "extra-traits"] }
 quote = "1.0.7"
 proc-macro2 = "1.0.18"
 derive-syn-parse = "0.1.5"
-bincode = "1.3.3"
+bincode = { workspace = true }
 #siphasher = "0.3.10"
 prettyplease = "0.1.21"
-serde = { version = "1.0.143", default-features = false, features = ["derive"] }
+serde = { workspace = true, default-features = false, features = ["derive"] }
 
 
 #spirv = { version = "0.2.0", features = ["serialize", "deserialize"] }
