--- a/crates/krnl/Cargo.toml
+++ b/crates/krnl/Cargo.toml
@@ -30,7 +30,7 @@ once_cell = { version = "1.13.0", default-features = false, features = ["std", "
 
 #crossbeam-channel = { version = "0.5.6", optional = true }
 bytemuck = { version = "1.11.0", default-features = false }
-#bincode = "1.3.3"
+bincode = { workspace = true }
 dashmap = { version = "5.3.4", optional = true }
 rspirv = { version = "0.11.0", optional = true }
 
