--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,4 @@ half = { version = "2.1.0", default-features = false, features = ["num-traits", 
 num-traits = { version = "0.2.14", default-features = false }
 thiserror = "1.0.31"
 bincode = "1.3.3"
-
-[profile.release]
-debug = true
+rspirv = "0.11.0"
