--- a/crates/krnl/Cargo.toml
+++ b/crates/krnl/Cargo.toml
@@ -15,7 +15,6 @@ publish = false
 krnl-macros = { path = "../krnl-macros" }
 krnl-core = { path = "../krnl-core" }
 vulkano = { git = "https://github.com/vulkano-rs/vulkano", branch = "0.32.X", optional = true }
-#vulkano = { path = "../../../vulkano/vulkano", optional = true }
 serde = { workspace = true, default-features = false, features = ["derive", "rc"] }
 anyhow.workspace = true
 half = { workspace = true, features = ["std"] }
@@ -30,17 +29,15 @@ once_cell = { version = "1.13.0", default-features = false, features = ["std", "
 
 #crossbeam-channel = { version = "0.5.6", optional = true }
 bytemuck = { version = "1.11.0", default-features = false }
-bincode = { workspace = true }
+bincode.workspace = true
 dashmap = { version = "5.3.4", optional = true }
-rspirv = { version = "0.11.0", optional = true }
+rspirv = { workspace = true, optional = true }
 
 ash = { version = "0.37.1", optional = true }
-rayon = "1.6.1"
-shaderc = { version = "0.8.2", optional = true }
-#spirv-tools = { version = "0.9.0", default-features = false, features = ["use-compiled-tools"], optional = true }
+#rayon = "1.6.1"
 
 [target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
 ash-molten = { version = "0.12.0", features = ["pre-built"], optional = true }
 
 [features]
-device = ["dep:vulkano", "dep:ash", "dep:ash-molten", "dep:crossbeam-channel", "dep:dashmap", "dep:shaderc", "dep:rspirv"]
+device = ["dep:vulkano", "dep:ash", "dep:ash-molten", "dep:crossbeam-channel", "dep:dashmap", "dep:rspirv"]
