--- a/crates/krnlc/Cargo.toml
+++ b/crates/krnlc/Cargo.toml
@@ -20,7 +20,7 @@ bincode = "1.3.3"
 prettyplease = "0.1.21"
 symlink = "0.1.0"
 rspirv = "0.11.0"
-#spirv-tools = "0.9.0"
+spirv-tools = { version = "0.9.0", default-features = false }
 #proc-macro2 = "1.0.47"
 itertools = "0.10.5"
 ctrlc = { version = "3.2.5", features = ["termination"] }
@@ -28,5 +28,5 @@ parking_lot = "0.12.1"
 
 [features]
 default = ["use-installed-tools"]
-use-compiled-tools = ["spirv-builder/use-compiled-tools"]
-use-installed-tools = ["spirv-builder/use-installed-tools"]
+use-compiled-tools = ["spirv-builder/use-compiled-tools", "spirv-tools/use-compiled-tools"]
+use-installed-tools = ["spirv-builder/use-installed-tools", "spirv-builder/use-installed-tools"]
