added item attribute

--- a/benchmarks/compute-benchmarks/Cargo.toml
+++ b/benchmarks/compute-benchmarks/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 
 [dependencies]
 approx = "0.5.1"
-argparse = "0.2.2"
+#argparse = "0.2.2"
 criterion = { version = "0.4.0", default-features = false }
 cust = { version = "0.3.2", optional = true }
 krnl = { path = "../../crates/krnl", features = ["device"] }
@@ -20,7 +20,7 @@ cuda = ["dep:cust"]
 ocl = ["dep:ocl"]
 
 [build-dependencies]
-anyhow = "1.0.65"
+anyhow.workspace = true
 
 
 [[bench]]
