--- a/crates/krnl-macros/Cargo.toml
+++ b/crates/krnl-macros/Cargo.toml
@@ -21,4 +21,5 @@ derive-syn-parse = "0.1.5"
 bincode = { workspace = true }
 prettyplease = "0.1.21"
 serde = { workspace = true, default-features = false, features = ["derive"] }
+derive_more = { workspace = true, default-features = false, features = ["is_variant"] }
 
