--- a/crates/krnlc/Cargo.toml
+++ b/crates/krnlc/Cargo.toml
@@ -21,6 +21,7 @@ rspirv = "0.11.0"
 spirv-tools = { version = "0.9.0", default-features = false }
 itertools = "0.10.5"
 ctrlc = { version = "3.2.5", features = ["termination"] }
+rayon = "1.7.0"
 
 [features]
 default = ["use-installed-tools"]
