improved engine perf

--- a/benchmarks/compute-benchmarks/Cargo.toml
+++ b/benchmarks/compute-benchmarks/Cargo.toml
@@ -10,17 +10,18 @@ publish = false
 approx = "0.5.1"
 criterion = { version = "0.4.0", default-features = false }
 cust = { version = "0.3.2", optional = true }
+futures = { version = "0.1", optional = true }
 krnl = { path = "../../crates/krnl", features = ["device"] }
 ocl = { version = "0.19.4", optional = true }
+qutex = { version = "=0.2.3", optional = true }
 rand = "0.8.5"
 
 [features]
 cuda = ["dep:cust"]
-ocl = ["dep:ocl"]
+ocl = ["dep:ocl", "dep:futures", "dep:qutex"]
 
 [build-dependencies]
 anyhow.workspace = true
-
 
 [[bench]]
 name = "benchmarks"
