--- a/crates/krnl/Cargo.toml
+++ b/crates/krnl/Cargo.toml
@@ -24,23 +24,20 @@ dry.workspace = true
 derive_more.workspace = true
 thiserror.workspace = true
 parking_lot = "0.12.1"
-crossbeam-channel = { version = "0.5.6", optional = true }
 once_cell = { version = "1.13.0", default-features = false, features = ["std", "alloc"] }
-
-#crossbeam-channel = { version = "0.5.6", optional = true }
 bytemuck = { version = "1.11.0", default-features = false }
 bincode.workspace = true
 dashmap = { version = "5.3.4", optional = true }
 rspirv = { workspace = true, optional = true }
 
 ash = { version = "0.37.1", optional = true }
-#rayon = "1.6.1"
+atomicbox = { version = "0.4.0", optional = true }
 
 [target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
 ash-molten = { version = "0.12.0", features = ["pre-built"], optional = true }
 
 [features]
-device = ["dep:vulkano", "dep:ash", "dep:ash-molten", "dep:crossbeam-channel", "dep:dashmap", "dep:rspirv"]
+device = ["dep:vulkano", "dep:ash", "dep:ash-molten", "dep:dashmap", "dep:rspirv", "dep:atomicbox"]
 
 [package.metadata.krnlc]
 features = ["device"]
