--- a/benchmarks/compute-benchmarks/Cargo.toml
+++ b/benchmarks/compute-benchmarks/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
 license = "MIT/Apache-2.0"
 publish = false
+autobins = false 
+autoexamples = false
+autotests = false
+autobenches = false
 
 [dependencies]
 approx = "0.5.1"
