--- a/crates/krnl-macros/Cargo.toml
+++ b/crates/krnl-macros/Cargo.toml
@@ -9,6 +9,10 @@ license.workspace = true
 readme.workspace = true
 repository.workspace = true
 publish = false
+autobins = false 
+autoexamples = false
+autotests = false
+autobenches = false
 
 [lib]
 proc-macro = true
