--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,7 @@ anyhow = "1.0.60"
 half = { version = "2.1.0", default-features = false, features = ["num-traits", "serde"] }
 num-traits = { version = "0.2.14", default-features = false }
 thiserror = "1.0.31"
-bincode = "1.3.3"
+bincode2 = "2.0.1"
 rspirv = "0.11.0"
+flate2 = "1.0.25"
+hex = "0.4.3"
