--- a/crates/krnlc/Cargo.toml
+++ b/crates/krnlc/Cargo.toml
@@ -3,7 +3,6 @@ name = "krnlc"
 version = "0.0.1"
 edition = "2021"
 publish = false
-autobins = false 
 autoexamples = false
 autotests = false
 autobenches = false
@@ -18,7 +17,7 @@ syn = { version = "1.0.103", features = ["full", "visit", "extra-traits"] }
 cargo_metadata = "0.15.1"
 spirv-builder = { version = "=0.6.0", default-features = false }
 serde = { version = "1.0.143", default-features = false, features = ["derive"] }
-bincode = "1.3.3"
+bincode2 = "2.0.1"
 prettyplease = "0.1.21"
 symlink = "0.1.0"
 rspirv = "0.11.0"
@@ -26,6 +25,8 @@ spirv-tools = { version = "0.9.0", default-features = false }
 itertools = "0.10.5"
 ctrlc = { version = "3.2.5", features = ["termination"] }
 rayon = "1.7.0"
+flate2 = "1.0.25"
+hex = "0.4.3"
 
 [features]
 default = ["use-installed-tools"]
