--- a/crates/krnlc/Cargo.toml
+++ b/crates/krnlc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "krnlc"
-version = "0.0.1"
+version = "0.0.1-unstable"
 edition = "2021"
 publish = false
 autoexamples = false
@@ -23,10 +23,11 @@ symlink = "0.1.0"
 rspirv = "0.11.0"
 spirv-tools = { version = "0.9.0", default-features = false }
 itertools = "0.10.5"
-ctrlc = { version = "3.2.5", features = ["termination"] }
+#ctrlc = { version = "3.2.5", features = ["termination"] }
 rayon = "1.7.0"
 flate2 = "1.0.25"
 hex = "0.4.3"
+fxhash = "0.2.1"
 
 [features]
 default = ["use-installed-tools"]
