--- a/crates/krnl/Cargo.toml
+++ b/crates/krnl/Cargo.toml
@@ -39,12 +39,12 @@ fxhash = { workspace = true, optional = true }
 ash = { version = "0.37.1", optional = true, features = ["linked"] }
 atomicbox = { version = "0.4.0", optional = true }
 
-[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
-ash-molten = { version = "0.13.1", features = ["pre-built"], optional = true }
+#[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
+#ash-molten = { version = "0.13.1", features = ["external"], optional = true }
 
 [features]
 default = ["device"]
-device = ["dep:vulkano", "dep:ash", "dep:ash-molten", "dep:dashmap", "dep:rspirv", "dep:atomicbox", "dep:fxhash"]
+device = ["dep:vulkano", "dep:ash", "dep:dashmap", "dep:rspirv", "dep:atomicbox", "dep:fxhash"]
 
 [package.metadata.krnlc]
 default-features = false
