--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ repository = "https://github.com/charles-r-earp/krnl"
 serde = { version = "1.0.143", default-features = false, features = ["derive"] }
 dry = "0.1.1"
 paste = "1.0.7"
-derive_more = "0.99.11"
+derive_more = { version = "0.99.11", default-features = false }
 anyhow = "1.0.60"
 half = { version = "2.1.0", default-features = false, features = ["num-traits", "serde"] }
 num-traits = { version = "0.2.14", default-features = false }
