--- a/crates/krnl/Cargo.toml
+++ b/crates/krnl/Cargo.toml
@@ -25,7 +25,7 @@ half = { workspace = true, features = ["std"] }
 num-traits = { workspace = true, features = ["std"] }
 paste.workspace = true 
 dry.workspace = true
-derive_more.workspace = true
+derive_more = { workspace = true, features = ["unwrap", "deref", "deref_mut"] }
 thiserror.workspace = true
 parking_lot = "0.12.1"
 once_cell = { version = "1.13.0", default-features = false, features = ["std", "alloc"] }
