--- a/crates/krnl/Cargo.toml
+++ b/crates/krnl/Cargo.toml
@@ -18,7 +18,6 @@ autobenches = false
 [dependencies]
 krnl-macros = { path = "../krnl-macros" }
 krnl-core = { path = "../krnl-core" }
-vulkano = { git = "https://github.com/vulkano-rs/vulkano", branch = "0.32.X", optional = true, default-features = false }
 serde = { workspace = true, default-features = false, features = ["derive", "rc"] }
 anyhow.workspace = true
 half = { workspace = true, features = ["std"] }
@@ -36,11 +35,14 @@ dashmap = { version = "5.3.4", optional = true }
 rspirv = { workspace = true, optional = true }
 fxhash = { workspace = true, optional = true }
 
-ash = { version = "0.37.1", optional = true, features = ["linked"] }
-atomicbox = { version = "0.4.0", optional = true }
 
 #[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
 #ash-molten = { version = "0.13.1", features = ["external"], optional = true }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+vulkano = { git = "https://github.com/vulkano-rs/vulkano", branch = "0.32.X", optional = true, default-features = false }
+ash = { version = "0.37.1", optional = true, features = ["linked"] }
+atomicbox = { version = "0.4.0", optional = true }
 
 [features]
 default = ["device"]
