--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,8 +35,8 @@ jobs:
     - name: validate
       run: cargo xtask validate -v
 
-  cargo-deny:
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-      - uses: EmbarkStudios/cargo-deny-action@v1
+ # cargo-deny:
+ #   runs-on: ubuntu-20.04
+ #   steps:
+ #     - uses: actions/checkout@v2
+ #     - uses: EmbarkStudios/cargo-deny-action@v1
