--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,10 +22,10 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-          - os: windows-latest
-            target: x86_64-pc-windows-msvc
-          - os: macos-latest
-            target: x86_64-apple-darwin
+#          - os: windows-latest
+#            target: x86_64-pc-windows-msvc
+#          - os: macos-latest
+#            target: x86_64-apple-darwin
     steps:
     - uses: actions/checkout@v2
     - uses: actions-rs/toolchain@v1
