--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,9 +2,9 @@
 name: Continuous Integration
 
 on:
-  push:
-    branches: 
-      - main 
+#  push:
+#    branches: 
+#      - main 
   pull_request:
 
 env:
