--- a/crates/krnl/Cargo.toml
+++ b/crates/krnl/Cargo.toml
@@ -67,6 +67,7 @@ path = "tests/wasm_integration_tests.rs"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 libtest-mimic = "0.6.0"
+rayon = "1.7.0"
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = "0.3.33"
