--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
 edition = "2021"
 homepage = "https://github.com/charles-r-earp/krnl"
 keywords = ["kernel", "compute", "vulkan", "gpu"]
+description = "Safe, portable, high performance compute (GPGPU) kernels."
 license = "MIT/Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/charles-r-earp/krnl"
