--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,16 +2,16 @@
 name: Continuous Integration
 
 on:
-#  push:
-#    branches: 
-#      - main 
+  push:
+    branches: 
+      - main 
   pull_request:
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  validate:
+  test:
     runs-on: ${{ matrix.os }}
     env:
       RUST_BACKTRACE: 1
@@ -22,21 +22,26 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-#          - os: windows-latest
-#            target: x86_64-pc-windows-msvc
-#          - os: macos-latest
-#            target: x86_64-apple-darwin
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+          - os: macos-latest
+            target: x86_64-apple-darwin
     steps:
     - uses: actions/checkout@v2
-    - uses: actions-rs/toolchain@v1
-      with:
-            toolchain: nightly
-            components: miri
-    - name: validate
-      run: cargo xtask validate -v
-
- # cargo-deny:
- #   runs-on: ubuntu-20.04
- #   steps:
- #     - uses: actions/checkout@v2
- #     - uses: EmbarkStudios/cargo-deny-action@v1
+    - name: test
+      run: cargo test --no-default-features --workspace --exclude compute-benchmarks -v -- --format=terse
+    - name: krnlc check
+      run: cargo xtask krnlc --workspace --check -v
+      
+  lint: 
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: lint
+      run: cargo xtask lint -v
+          
+  cargo-deny:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: EmbarkStudios/cargo-deny-action@v1
