--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 homepage = "https://github.com/charles-r-earp/krnl"
 keywords = ["kernel", "compute", "vulkan", "gpu"]
 description = "Safe, portable, high performance compute (GPGPU) kernels."
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/charles-r-earp/krnl"
 
