--- a/crates/krnlc/Cargo.toml
+++ b/crates/krnlc/Cargo.toml
@@ -3,6 +3,7 @@ name = "krnlc"
 version = "0.0.1-unstable"
 authors = ["Charles R Earp <charles-r-earp@gmail.com>"]
 description = "Compiler for krnl modules."
+license = "MIT OR Apache-2.0"
 edition = "2021"
 publish = false
 autoexamples = false
