Restructured workspace layout

--- a/benches/compute-benches/Cargo.toml
+++ b/benches/compute-benches/Cargo.toml
@@ -16,7 +16,7 @@ anyhow.workspace = true
 criterion = { version = "0.4.0", default-features = false, features = ["plotters"] }
 cust = { version = "0.3.2", optional = true }
 futures = { version = "0.1", optional = true }
-krnl = { path = "../../crates/krnl", default-features = false, features = ["device"] }
+krnl = { path = "../../../krnl", default-features = false }
 ocl = { version = "0.19.4", optional = true }
 qutex = { version = "=0.2.3", optional = true }
 rand = "0.8.5"
@@ -24,6 +24,8 @@ autograph = { git = "https://github.com/charles-r-earp/autograph", optional = tr
 blocker = { version = "0.1.2", features = ["thread_yield"], optional = true }
 
 [features]
+default = ["device"]
+device = ["krnl/device"]
 autograph = ["dep:autograph", "dep:blocker"]
 cuda = ["dep:cust"]
 ocl = ["dep:ocl", "dep:futures", "dep:qutex"]
@@ -34,3 +36,4 @@ anyhow.workspace = true
 [[bench]]
 name = "benchmarks"
 harness = false
+required-features = ["device"]
