--- a/krnl-core/Cargo.toml
+++ b/krnl-core/Cargo.toml
@@ -4,7 +4,7 @@ version.workspace = true
 authors.workspace = true
 edition.workspace = true
 homepage.workspace = true
-keywords.workspace = true
+keywords = ["krnl"]
 license.workspace = true
 readme.workspace = true
 repository.workspace = true
