--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = ["benches/*", "tests/*", "xtask"]
 
 [workspace.package]
-version = "0.0.1-alpha"
+version = "0.0.1"
 authors = ["Charles R Earp <charles.r.earp@gmail.com>"]
 edition = "2021"
 rust-version = "1.68.2"
@@ -15,9 +15,9 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [workspace.dependencies]
-krnl-macros = { path = "krnl-macros", version = "=0.0.1-alpha" }
-krnl-core = { path = "krnl-core", version = "=0.0.1-alpha" }
-krnl = { path = "." }
+krnl-macros = { path = "krnl-macros", version = "=0.0.1" }
+krnl-core = { path = "krnl-core", version = "=0.0.1" }
+krnl = { path = ".", default-features = false }
 serde = { version = "1.0.143", default-features = false, features = ["derive"] }
 dry = "0.1.1"
 paste = "1.0.7"
@@ -86,6 +86,7 @@ atomicbox = { version = "0.4.0", optional = true }
 
 [features]
 default = ["device"]
+# Enables device functionality. Not supported on the web.
 device = ["dep:vulkano", "dep:ash", "dep:dashmap", "dep:rspirv", "dep:atomicbox", "dep:fxhash"]
 
 [package.metadata.krnlc]
