--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 homepage = "https://github.com/charles-r-earp/krnl"
 repository = "https://github.com/charles-r-earp/krnl"
 license = "MIT OR Apache-2.0"
-publish = false
+publish = true
 
 [workspace.dependencies]
 krnl-macros = { path = "krnl-macros", version = "=0.0.1" }
