enabled publish on all crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ repository.workspace = true
 license.workspace = true
 keywords = ["kernel", "compute", "vulkan", "gpu"]
 categories = ["hardware-support", "science", "mathematics"]
-publish = false
+publish.workspace = true
 autobins = false 
 autoexamples = false
 autotests = false
