--- a/krnlc/Cargo.toml
+++ b/krnlc/Cargo.toml
@@ -11,7 +11,7 @@ documentation = "https://docs.rs/krnl"
 readme = "README.md"
 homepage = "https://github.com/charles-r-earp/krnl"
 license = "MIT OR Apache-2.0"
-publish = false
+publish = true
 autoexamples = false
 autotests = false
 autobenches = false
