--- a/krnl-macros/Cargo.toml
+++ b/krnl-macros/Cargo.toml
@@ -8,7 +8,7 @@ keywords = ["krnl"]
 license.workspace = true
 readme.workspace = true
 repository.workspace = true
-publish = false
+publish.workspace = true
 autobins = false 
 autoexamples = false
 autotests = false
