--- a/krnl-core/Cargo.toml
+++ b/krnl-core/Cargo.toml
@@ -3,11 +3,13 @@ name = "krnl-core"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
-homepage.workspace = true
-keywords = ["krnl"]
-license.workspace = true
+description.workspace = true
+documentation.workspace = true
 readme.workspace = true
+homepage.workspace = true
 repository.workspace = true
+license.workspace = true
+keywords = ["krnl"]
 publish.workspace = true
 autobins = false 
 autoexamples = false
