--- a/krnlc/Cargo.toml
+++ b/krnlc/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["Charles R Earp <charles-r-earp@gmail.com>"]
 edition = "2021"
 description = "Compiler for krnl modules."
 documentation = "https://docs.rs/krnl"
-readme = "README.md"
+readme = "../README.md"
 homepage = "https://github.com/charles-r-earp/krnl"
 license = "MIT OR Apache-2.0"
 publish = true
