--- a/krnl-macros/Cargo.toml
+++ b/krnl-macros/Cargo.toml
@@ -3,13 +3,12 @@ name = "krnl-macros"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
-description.workspace = true
+description = "Macros for krnl."
 documentation.workspace = true
 readme.workspace = true
 homepage.workspace = true
 repository.workspace = true
 license.workspace = true
-keywords = ["krnl"]
 publish.workspace = true
 autobins = false 
 autoexamples = false
